New Changes Gps Navigation Screen switches done. UI Improvements

--- a/app/src/main/res/layout/activity_serch_places.xml
+++ b/app/src/main/res/layout/activity_serch_places.xml
@@ -19,14 +19,11 @@
 
     <ImageView
         android:id="@+id/ivBack"
-        android:layout_width="@dimen/_25sdp"
-        android:layout_height="@dimen/_25sdp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="28dp"
+        android:layout_width="@dimen/_28sdp"
+        android:layout_height="@dimen/_28sdp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/round_white_buttton"
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="?attr/selectableItemBackgroundBorderless"
         android:padding="8dp"
         android:scaleType="centerInside"
         android:src="@drawable/ic_back_arrow"
@@ -179,7 +176,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:tint="@color/black" />
+                app:tint="@color/blue" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -219,8 +216,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/SelectLocationButton"
-        android:layout_width="@dimen/_60sdp"
-        android:layout_height="@dimen/_60sdp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_alignParentEnd="true"
         android:layout_centerInParent="true"
         android:layout_marginBottom="4dp"
@@ -238,7 +235,6 @@
             android:id="@+id/imageView4"
             android:layout_width="26dp"
             android:layout_height="26dp"
-            android:layout_marginTop="14dp"
             android:padding="@dimen/_4sdp"
             android:rotationY="180"
             android:scaleType="centerInside"
@@ -247,25 +243,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
             app:tint="@color/white" />
 
 
-        <TextView
-            android:id="@+id/textView16"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto"
-            android:text="Done"
-            android:textAllCaps="true"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView4"
-            app:layout_constraintVertical_bias="0.0" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
     <androidx.constraintlayout.widget.ConstraintLayout
