--- a/app/src/main/res/layout/fragment_saved_places.xml
+++ b/app/src/main/res/layout/fragment_saved_places.xml
@@ -51,12 +51,12 @@
 
     <ImageButton
         android:id="@+id/back_button"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
+        android:layout_width="@dimen/_28sdp"
+        android:layout_height="@dimen/_28sdp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/round_white_buttton"
-        android:padding="4dp"
+        android:padding="8dp"
         android:scaleType="centerInside"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
