--- a/app/src/main/res/layout/travel_tools.xml
+++ b/app/src/main/res/layout/travel_tools.xml
@@ -195,7 +195,7 @@
 
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:padding="8dp"
+                    android:padding="12dp"
                     android:scaleType="centerInside"
                     android:src="@drawable/speedmeter_icon"
                     app:layout_constraintBottom_toTopOf="@+id/textView__"
@@ -236,12 +236,12 @@
 
     <ImageButton
         android:id="@+id/back_button"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
+        android:layout_width="@dimen/_28sdp"
+        android:layout_height="@dimen/_28sdp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/round_white_buttton"
-        android:padding="6dp"
+        android:padding="8dp"
         android:scaleType="centerInside"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
