--- a/app/src/main/res/layout/fragment_route_finder_google.xml
+++ b/app/src/main/res/layout/fragment_route_finder_google.xml
@@ -322,6 +322,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/round_white_buttton"
         android:backgroundTint="@color/blue"
+        android:visibility="gone"
         android:elevation="6dp"
         android:gravity="center"
         android:paddingStart="10dp"
@@ -411,7 +412,7 @@
             android:id="@+id/layer_selection_iv"
             android:layout_width="26dp"
             android:layout_height="26dp"
-            android:src="@drawable/earthview_on"
+            android:src="@drawable/earthview_off"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
