--- a/app/src/main/res/layout/fragment_analog.xml
+++ b/app/src/main/res/layout/fragment_analog.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:scrollbarSize="0dp"
+
+    android:overScrollMode="never">
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:layout_gravity="center"
     android:background="@color/transparent"
 
     >
@@ -14,7 +23,7 @@
         android:layout_centerInParent="true"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        app:borderColor="@color/white"
+        app:borderColor="@color/black"
         app:borderSize="8dp"
         app:fillColor="@color/flat_red_1"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -23,8 +32,9 @@
         app:layout_constraintTop_toTopOf="parent"
         app:maxSpeed="100"
         app:metricText="km/h"
-        app:sv_markColor="@color/white"
-        app:textColor="@color/white" />
+        app:sv_markColor="@color/black"
+        app:textColor="@color/black" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
