--- a/app/src/main/res/layout/fragment_compass.xml
+++ b/app/src/main/res/layout/fragment_compass.xml
@@ -1,9 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8" ?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:scrollbarSize="0dp"
+    android:overScrollMode="never">
+    <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:layout_gravity="center"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -30,9 +37,10 @@
     <ImageView
         android:id="@+id/imgCompass"
         android:layout_width="0dp"
-        android:layout_height="280dp"
+        android:layout_height="265dp"
         android:layout_below="@+id/txtDegrees"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="25dp"
         android:background="@color/transparent"
@@ -74,3 +82,4 @@
 
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
