--- a/app/src/main/res/layout/fragment_qibla_compass.xml
+++ b/app/src/main/res/layout/fragment_qibla_compass.xml
@@ -1,9 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8" ?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:scrollbarSize="0dp"
+    android:layout_gravity="center"
+    android:overScrollMode="never">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:layout_gravity="center"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -29,7 +37,7 @@
     <ImageView
         android:id="@+id/imgCompass"
         android:layout_width="0dp"
-        android:layout_height="280dp"
+        android:layout_height="265dp"
         android:layout_below="@+id/txtDegrees"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
@@ -78,6 +86,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:textColor="@color/black"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtDegrees" />
@@ -95,3 +104,4 @@
 
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
