--- a/app/src/main/res/layout/travel_tools.xml
+++ b/app/src/main/res/layout/travel_tools.xml
@@ -19,16 +19,17 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bottom_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline6">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/compass"
             android:layout_width="0dp"
-            android:layout_height="@dimen/_48sdp"
+            android:layout_height="0dp"
             app:cardCornerRadius="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/qibla_compass"
@@ -45,7 +46,8 @@
 
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:padding="8dp"
+
+                    android:layout_marginBottom="2dp"
                     android:scaleType="centerInside"
                     android:src="@drawable/home_compass_icon"
                     app:layout_constraintBottom_toTopOf="@+id/textView_"
@@ -73,7 +75,7 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/weather"
             android:layout_width="0dp"
-            android:layout_height="@dimen/_48sdp"
+            android:layout_height="0dp"
             app:cardCornerRadius="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/compass"
@@ -90,7 +92,8 @@
 
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:padding="8dp"
+
+                    android:layout_marginBottom="2dp"
                     android:scaleType="centerInside"
                     android:src="@drawable/weather_icon"
                     app:layout_constraintBottom_toTopOf="@+id/textView8"
@@ -119,7 +122,7 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/qibla_compass"
             android:layout_width="0dp"
-            android:layout_height="@dimen/_48sdp"
+            android:layout_height="0dp"
             app:cardCornerRadius="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/speedometer"
@@ -136,7 +139,8 @@
 
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:padding="8dp"
+
+                    android:layout_marginBottom="2dp"
                     android:scaleType="centerInside"
                     android:src="@drawable/qibla_compass_icon"
                     app:layout_constraintBottom_toTopOf="@+id/textView10"
@@ -164,7 +168,7 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/speedometer"
             android:layout_width="0dp"
-            android:layout_height="@dimen/_48sdp"
+            android:layout_height="0dp"
             app:cardCornerRadius="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -178,10 +182,10 @@
                 android:orientation="vertical">
 
                 <ImageView
-
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:padding="12dp"
+                    android:layout_marginBottom="2dp"
+                    android:padding="4dp"
                     android:scaleType="centerInside"
                     android:src="@drawable/speedmeter_icon"
                     app:layout_constraintBottom_toTopOf="@+id/textView__"
@@ -203,6 +207,13 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
+
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/guideline5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layout_constraintGuide_begin="20dp" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -229,10 +240,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/ads_parent"
+        app:layout_constraintBottom_toTopOf="@+id/guideline15"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
     <ImageButton
         android:id="@+id/back_button"
         android:layout_width="@dimen/_28sdp"
@@ -256,7 +268,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:gravity="center"
-        android:padding="8dp"
+
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -266,13 +278,29 @@
     <FrameLayout
         android:id="@+id/ads_parent"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/bottom_layout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline15">
 
     </FrameLayout>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.91" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.52" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
