--- a/app/src/main/res/drawable-mdpi/customborder.xml
+++ b/app/src/main/res/drawable-mdpi/customborder.xml
@@ -5,5 +5,12 @@
     tools:ignore="MissingDefaultResource">
     <solid android:color="@color/white"/>
     <corners android:radius="0dp"/>
-    <stroke android:width="1dp" android:color="@color/flat_grey_dark_1"/>
+
+    <padding
+        android:top="2dp"
+        android:bottom="2dp"
+        android:left="2dp"
+        android:right="2dp"/>
+
+    <stroke android:width="1dp" android:color="@color/flat_grey_normal_1"/>
 </shape>
