--- a/app/src/main/res/drawable-xxhdpi/button_background_extra_round.xml
+++ b/app/src/main/res/drawable-xxhdpi/button_background_extra_round.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#FF7518" />
-            <corners android:radius="8dp"/>
+            <solid android:color="@color/blue" />
+            <corners android:radius="25dp"/>
         </shape>
     </item>
 </selector>
