--- a/app/src/main/res/layout/gps_ads_concent.xml
+++ b/app/src/main/res/layout/gps_ads_concent.xml
@@ -32,7 +32,6 @@
             android:layout_width="250dp"
             android:layout_height="50dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="16dp"
             android:autoSizeStepGranularity="2sp"
             android:autoSizeTextType="uniform"
             android:gravity="center"
@@ -45,10 +44,10 @@
 
         <ImageView
             android:id="@+id/app_icon_image"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="16dp"
             android:autoSizeStepGranularity="2sp"
             android:autoSizeTextType="uniform"
             android:gravity="center"
@@ -79,14 +78,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="16dp"
 
             android:fontFamily="@font/poppins"
 
             android:gravity="center"
             android:text="@string/description1"
             android:textColor="#004FA5"
-            android:textSize="15sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/guideline19"
             app:layout_constraintStart_toStartOf="@+id/guideline18"
@@ -100,13 +98,13 @@
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:autoSizeStepGranularity="2sp"
-            android:gravity="center"
             android:fontFamily="@font/poppins"
+            android:gravity="center"
 
             android:text="@string/description2"
 
             android:textColor="#2C2C2C "
-            android:textSize="15sp"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/description1" />
@@ -116,7 +114,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="16dp"
             android:autoLink="web"
             android:autoSizeStepGranularity="2sp"
             android:autoSizeTextType="uniform"
@@ -136,7 +134,6 @@
             android:layout_height="35dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="12dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/consent_button_background"
             android:gravity="center"
@@ -147,7 +144,8 @@
             app:layout_constraintEnd_toEndOf="@+id/description3"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/no_button"
-            app:layout_constraintTop_toBottomOf="@+id/privacy" />
+            app:layout_constraintTop_toTopOf="@+id/no_button"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/no_button"
@@ -155,6 +153,7 @@
             android:layout_height="35dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="32dp"
             android:background="@drawable/consent_button_background_hollow"
@@ -166,7 +165,7 @@
             app:layout_constraintEnd_toStartOf="@+id/yes_button"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="@+id/description3"
-            app:layout_constraintTop_toTopOf="@+id/yes_button" />
+            app:layout_constraintTop_toBottomOf="@+id/privacy" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline18"
