--- a/app/src/main/res/layout/native_ad_unified_small_no_media.xml
+++ b/app/src/main/res/layout/native_ad_unified_small_no_media.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/customborder"
-
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -12,9 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
-        android:orientation="vertical"
-        >
-
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/small_ad_app_icon"
@@ -94,15 +91,13 @@
             app:layout_constraintStart_toStartOf="@+id/small_ad_headline"
             app:layout_constraintTop_toBottomOf="@+id/small_ad_headline" />
 
-        <TextView
+        <Button
             android:id="@+id/small_ad_call_to_action"
             android:layout_width="0dp"
-            android:layout_height="55dp"
-            android:layout_marginStart="8dp"
+            android:layout_height="44dp"
             android:layout_marginTop="2dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:background="@drawable/button_background"
+            android:background="@drawable/button_background_extra_round"
 
             android:gravity="center"
             android:text="text"
@@ -110,8 +105,8 @@
             android:textColor="@color/white"
             android:textSize="19sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline22"
+            app:layout_constraintStart_toStartOf="@+id/guideline20"
             app:layout_constraintTop_toBottomOf="@+id/small_ad_app_icon"
             app:layout_constraintVertical_bias="0.0" />
 
@@ -125,6 +120,20 @@
             app:layout_constraintStart_toStartOf="parent"
 
             app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline20"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.13" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline22"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.87" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
